--- a/public/401.html
+++ b/public/401.html
@@ -6,16 +6,16 @@
   <meta content="Protected page" property="og:title">
   <meta content="Protected page" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="css/components.css" rel="stylesheet" type="text/css">
-  <link href="css/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.css" rel="stylesheet" type="text/css">
+  <link href="app/css/normalize.css" rel="stylesheet" type="text/css">
+  <link href="app/css/components.css" rel="stylesheet" type="text/css">
+  <link href="app/css/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Inconsolata:400,700","Inter:300,regular,500,600,700"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon"><!--  LiveSession.io code  -->
+  <link href="app/images/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="app/images/webclip.png" rel="apple-touch-icon"><!--  LiveSession.io code  -->
   <script type="text/javascript">
     window['__ls_namespace'] = '__ls';
     window['__ls_script_url'] = 'https://cdn.livesession.io/track.js';
@@ -59,7 +59,7 @@
         <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
           <div class="navbar-row">
             <div class="nav-bar-container">
-              <a href="https://illusory.io" class="navbar-1-brand w-nav-brand"><img src="images/illusory-logo.svg" alt="" height="24"></a>
+              <a href="https://illusory.io" class="navbar-1-brand w-nav-brand"><img src="app/images/illusory-logo.svg" alt="" height="24"></a>
               <nav role="navigation" class="nav-menu-2 w-nav-menu">
                 <div class="w-layout-grid grid-4">
                   <a href="https://feedback.illusory.io/changelog" target="_blank" class="nav-link-2 w-nav-link">What&#x27;s New</a>
@@ -70,7 +70,7 @@
                   <div data-delay="0" data-hover="true" class="dropdown-nav-1 w-dropdown">
                     <div class="nav-link-2 nav-row-2 w-dropdown-toggle">
                       <div class="nav-row row-align-center">
-                        <div class="text-block-10">API</div><img src="images/arrow_down_white.svg" width="6" alt="" class="dropdown-link-icon">
+                        <div class="text-block-10">API</div><img src="app/images/arrow_down_white.svg" width="6" alt="" class="dropdown-link-icon">
                       </div>
                     </div>
                     <nav class="dropdown-list-3 w-dropdown-list">
@@ -144,7 +144,7 @@
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61e7cdbd824d2f94d05c4edc" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="js/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.js" type="text/javascript"></script>
+  <script src="app/js/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.js" type="text/javascript"></script>
 
 </body>
 </html>
