--- a/public/creating-account.html
+++ b/public/creating-account.html
@@ -6,16 +6,16 @@
   <meta content="Creating Account" property="og:title">
   <meta content="Creating Account" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="css/components.css" rel="stylesheet" type="text/css">
-  <link href="css/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.css" rel="stylesheet" type="text/css">
+  <link href="app/css/normalize.css" rel="stylesheet" type="text/css">
+  <link href="app/css/components.css" rel="stylesheet" type="text/css">
+  <link href="app/css/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Inconsolata:400,700","Inter:300,regular,500,600,700"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon"><!--  LiveSession.io code  -->
+  <link href="app/images/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="app/images/webclip.png" rel="apple-touch-icon"><!--  LiveSession.io code  -->
   <script type="text/javascript">
     window['__ls_namespace'] = '__ls';
     window['__ls_script_url'] = 'https://cdn.livesession.io/track.js';
@@ -56,7 +56,7 @@
 <body class="body dark">
   <div class="w-layout-blockcontainer page_loader--contain hide w-container">
     <div class="loader--wrp">
-      <div class="dvd_box"><img src="images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt="" class="eye">
+      <div class="dvd_box"><img src="app/images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt="" class="eye">
         <div class="page_loader--text">Loading</div>
       </div>
     </div>
@@ -86,7 +86,7 @@
                     <div class="sect_crd_rt_cta_txt">Almost there</div>
                   </a>
                   <a cta="support" href="#" class="sect_crd_rt_cta hide w-inline-block w-clearfix">
-                    <div class="sect_crd_rt_cta_txt">Taking too long? Contact support</div><img src="images/message-text-square-02.svg" loading="lazy" width="21" height="" alt="" class="rt_cta_ico right_alt-1">
+                    <div class="sect_crd_rt_cta_txt">Taking too long? Contact support</div><img src="app/images/message-text-square-02.svg" loading="lazy" width="21" height="" alt="" class="rt_cta_ico right_alt-1">
                   </a>
                   <div class="lott-dots" data-animation-type="lottie" data-src="documents/loading-line1.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="2"></div>
                 </div>
@@ -203,7 +203,7 @@
     <div id="cmdb" class="cmdb_hide"></div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61e7cdbd824d2f94d05c4edc" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="js/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.js" type="text/javascript"></script>
+  <script src="app/js/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.js" type="text/javascript"></script>
 
   <script src="https://scripts.illusory.io/scripts/pages/creating-account.full.js"></script>
 </body>
