--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -6,9 +6,9 @@
     <meta content="Dashboard" property="og:title">
     <meta content="Dashboard" property="twitter:title">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link href="css/normalize.css" rel="stylesheet" type="text/css">
-    <link href="css/components.css" rel="stylesheet" type="text/css">
-    <link href="css/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.css" rel="stylesheet" type="text/css">
+    <link href="app/css/normalize.css" rel="stylesheet" type="text/css">
+    <link href="app/css/components.css" rel="stylesheet" type="text/css">
+    <link href="app/css/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -17,8 +17,8 @@
         var n = c.documentElement, t = " w-mod-";
         n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
     }(window, document);</script>
-    <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
-    <link href="images/webclip.png" rel="apple-touch-icon"><!--  LiveSession.io code  -->
+    <link href="app/images/favicon.png" rel="shortcut icon" type="image/x-icon">
+    <link href="app/images/webclip.png" rel="apple-touch-icon"><!--  LiveSession.io code  -->
     <script type="text/javascript">
         window['__ls_namespace'] = '__ls';
         window['__ls_script_url'] = 'https://cdn.livesession.io/track.js';
@@ -76,7 +76,7 @@
 <body class="body dark">
 <div class="w-layout-blockcontainer page_loader--contain hide w-container">
     <div class="loader--wrp">
-        <div class="dvd_box"><img src="images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt="" class="eye">
+        <div class="dvd_box"><img src="app/images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt="" class="eye">
             <div class="page_loader--text">Loading</div>
         </div>
     </div>
@@ -123,7 +123,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="column-15 w-col w-col-1"><img src="images/switch-horizontal-01.svg" loading="lazy"
+                        <div class="column-15 w-col w-col-1"><img src="app/images/switch-horizontal-01.svg" loading="lazy"
                                                                   alt="" class="image-15"></div>
                         <div class="column-13 w-col w-col-4">
                             <div id="proxy-AT-US-LA1-1012" class="swap_crd--wrap">
@@ -132,7 +132,7 @@
                                         <div class="swap_crd_tit--inner w-clearfix">
                                             <div class="swap_crd_name--wrap w-clearfix">
                                                 <div class="swap_crd_tit--text">NEW PROXY</div>
-                                                <img src="images/info-circle-duo-2.svg" loading="lazy" width="11" alt=""
+                                                <img src="app/images/info-circle-duo-2.svg" loading="lazy" width="11" alt=""
                                                      class="info_circle_duo--icon">
                                                 <div class="info--wrap">
                                                     <div class="info_grid--wrap">
@@ -217,7 +217,7 @@
             <div class="modal_crd_content_wrp_btm">
                 <div class="notice_subtext--wrap w-clearfix">
                     <div class="notice--text">Irreversible Action</div>
-                    <img src="images/info-circle-duo-2.svg" loading="lazy" width="11" alt=""
+                    <img src="app/images/info-circle-duo-2.svg" loading="lazy" width="11" alt=""
                          class="info_circle_duo--icon">
                     <div class="info--wrap">
                         <div class="info_grid--wrap">
@@ -233,7 +233,7 @@
                     <div class="modal_options--wrap w-clearfix">
                         <div mod_btn="copy_settings" class="modal_option_check--wrap"></div>
                         <div class="notice--text">Copy Settings</div>
-                        <img src="images/info-circle-duo-2.svg" loading="lazy" width="11" alt=""
+                        <img src="app/images/info-circle-duo-2.svg" loading="lazy" width="11" alt=""
                              class="info_circle_duo--icon">
                         <div class="info--wrap wide">
                             <div class="info_grid--wrap">
@@ -306,7 +306,7 @@
             <div class="modal_crd_content_wrp_btm">
                 <div class="notice_subtext--wrap w-clearfix">
                     <div class="notice--text">Irreversible Action</div>
-                    <img src="images/info-circle-duo-2.svg" loading="lazy" width="11" alt=""
+                    <img src="app/images/info-circle-duo-2.svg" loading="lazy" width="11" alt=""
                          class="info_circle_duo--icon">
                     <div class="info--wrap">
                         <div class="info_grid--wrap">
@@ -349,12 +349,12 @@
     <div id="nav_sb" class="nav_sb">
         <div class="w-layout-blockcontainer top_nav--wrp w-container">
             <div class="sb_logo--wrp">
-                <a href="/" class="sb_logo_link--wrp w-inline-block"><img src="images/illusory-logo-circle-icon-83w.svg"
+                <a href="/app/" class="sb_logo_link--wrp w-inline-block"><img src="app/images/illusory-logo-circle-icon-83w.svg"
                                                                           loading="lazy" width="83" alt=""
                                                                           class="sb_logo--img"></a>
             </div>
             <div class="srchbr--wrp">
-                <div id="cmdb" class="cmd_bar"><img src="images/search-lg.svg" loading="lazy" width="14" height="14"
+                <div id="cmdb" class="cmd_bar"><img src="app/images/search-lg.svg" loading="lazy" width="14" height="14"
                                                     alt="" class="image-14">
                     <div class="dsh_srbr_ph">Find anything...</div>
                     <div class="srbr_f_wrp">
@@ -364,16 +364,16 @@
             </div>
             <div class="top_nav_menu_link--wrp">
                 <div class="top_nav_menu_items--wrp">
-                    <a href="/" class="top_nav--link start w-inline-block">
+                    <a href="/app/" class="top_nav--link start w-inline-block">
                         <div class="top_nav_link--text">Get Started</div>
                     </a>
-                    <a href="new" class="top_nav--link add w-inline-block">
+                    <a href="app/new" class="top_nav--link add w-inline-block">
                         <div class="top_nav_link--text">Add Proxies</div>
                     </a>
-                    <a href="allocate" class="top_nav--link allocate w-inline-block">
+                    <a href="app/allocate" class="top_nav--link allocate w-inline-block">
                         <div class="top_nav_link--text">Extend Time</div>
                     </a>
-                    <a href="funds" class="top_nav--link wallet w-inline-block">
+                    <a href="app/funds" class="top_nav--link wallet w-inline-block">
                         <div class="top_nav_link--text">Fund Wallet</div>
                     </a>
                 </div>
@@ -383,7 +383,7 @@
             <a href="#" class="bttm_nav--link support cmdbhelp--nav w-inline-block">
                 <div class="bttm_nav_link--text">Support</div>
             </a>
-            <a href="settings/account" class="bttm_nav--link settings w-inline-block">
+            <a href="app/settings/account" class="bttm_nav--link settings w-inline-block">
                 <div class="bttm_nav_link--text">Settings</div>
             </a>
             <div class="user_btn--wrap">
@@ -441,9 +441,9 @@
             </div>
             <div class="dash_mod_col w-col w-col-5">
                 <div id="prx_mod" class="mod_v2">
-                    <div class="proxy-modal-header w-clearfix"><img src="images/X-Icon-White.svg" loading="lazy" alt=""
+                    <div class="proxy-modal-header w-clearfix"><img src="app/images/X-Icon-White.svg" loading="lazy" alt=""
                                                                     id="mod_x" class="x-icon"><img
-                            src="images/Line-2.svg" loading="lazy" alt="" class="x-line-icon">
+                            src="app/images/Line-2.svg" loading="lazy" alt="" class="x-line-icon">
                         <div class="proxy-name-title-wrap">
                             <div class="skel_light">
                                 <div class="skel_bg_light"></div>
@@ -519,7 +519,7 @@
                                         </div>
                                         <div class="ind_det_wrp w-clearfix">
                                             <div id="cp-header-expires" class="ind_det">EXPIRES 2d 18H</div>
-                                            <img src="images/info-circle-duo-2.svg" loading="lazy" alt=""
+                                            <img src="app/images/info-circle-duo-2.svg" loading="lazy" alt=""
                                                  class="info_circle_duo--icon">
                                             <div modal_expires="tip" class="info--wrap below left">
                                                 <div class="info_grid--wrap">
@@ -709,7 +709,7 @@
                                                         <div class="modal_option_tit--text">Automatically Change IP
                                                         </div>
                                                         <div class="modal_info_icon--wrap w-clearfix"><img
-                                                                src="images/info-circle-duo-2.svg" loading="lazy" alt=""
+                                                                src="app/images/info-circle-duo-2.svg" loading="lazy" alt=""
                                                                 class="info_circle_duo--icon">
                                                             <div class="info--wrap modal">
                                                                 <div class="info_grid--wrap">
@@ -813,7 +813,7 @@
                                                     <div class="modal_config_tit--wrap">
                                                         <div class="modal_option_tit--text">IPv4 Enabled</div>
                                                         <div class="modal_info_icon--wrap w-clearfix"><img
-                                                                src="images/info-circle-duo-2.svg" loading="lazy" alt=""
+                                                                src="app/images/info-circle-duo-2.svg" loading="lazy" alt=""
                                                                 class="info_circle_duo--icon">
                                                             <div class="info--wrap modal">
                                                                 <div class="info_grid--wrap">
@@ -859,7 +859,7 @@
                                                     <div class="modal_config_tit--wrap">
                                                         <div class="modal_option_tit--text">Authentication</div>
                                                         <div class="modal_info_icon--wrap w-clearfix"><img
-                                                                src="images/info-circle-duo-2.svg" loading="lazy" alt=""
+                                                                src="app/images/info-circle-duo-2.svg" loading="lazy" alt=""
                                                                 class="info_circle_duo--icon">
                                                             <div class="info--wrap modal">
                                                                 <div class="info_grid--wrap">
@@ -946,7 +946,7 @@
                                                     <div class="modal_config_tit--wrap">
                                                         <div class="modal_option_tit--text">Connect</div>
                                                         <div class="modal_info_icon--wrap w-clearfix"><img
-                                                                src="images/info-circle-duo-2.svg" loading="lazy" alt=""
+                                                                src="app/images/info-circle-duo-2.svg" loading="lazy" alt=""
                                                                 class="info_circle_duo--icon">
                                                             <div class="info--wrap modal">
                                                                 <div class="info_grid--wrap">
@@ -1088,7 +1088,7 @@
                                                     <div class="modal_config_tit--wrap">
                                                         <div class="modal_option_tit--text">Expiration</div>
                                                         <div class="modal_info_icon--wrap w-clearfix"><img
-                                                                src="images/info-circle-duo-2.svg" loading="lazy" alt=""
+                                                                src="app/images/info-circle-duo-2.svg" loading="lazy" alt=""
                                                                 class="info_circle_duo--icon">
                                                             <div class="info--wrap modal">
                                                                 <div class="info_grid--wrap">
@@ -1107,7 +1107,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="modal_config_title_grid--item w-clearfix">
-                                                    <a href="allocate" target="_blank"
+                                                    <a href="app/allocate" target="_blank"
                                                        class="modal_config_link--wrap right expire w-inline-block">
                                                         <div class="modal_config--text bright">Manage</div>
                                                     </a>
@@ -1264,7 +1264,7 @@
                                 <div class="skel_mod">
                                     <div class="skel_mod_bg"></div>
                                 </div>
-                                <img src="images/align-right-01.svg" loading="lazy" width="18" alt=""
+                                <img src="app/images/align-right-01.svg" loading="lazy" width="18" alt=""
                                      class="collapse_expand_arrow mod">
                             </div>
                             <div class="mod_bottom_right_wrp w-clearfix">
@@ -1384,7 +1384,7 @@
 <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61e7cdbd824d2f94d05c4edc"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-<script src="js/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.js" type="text/javascript"></script>
+<script src="app/js/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.js" type="text/javascript"></script>
 
 <script src="https://scripts.illusory.io/scripts/pages/dashboard.full.js"></script>
 <script>
