--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,16 @@
   <meta content="Getting Started" property="og:title">
   <meta content="Getting Started" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="css/components.css" rel="stylesheet" type="text/css">
-  <link href="css/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.css" rel="stylesheet" type="text/css">
+  <link href="app/css/normalize.css" rel="stylesheet" type="text/css">
+  <link href="app/css/components.css" rel="stylesheet" type="text/css">
+  <link href="app/css/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Inconsolata:400,700","Inter:300,regular,500,600,700"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon"><!--  LiveSession.io code  -->
+  <link href="app/images/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="app/images/webclip.png" rel="apple-touch-icon"><!--  LiveSession.io code  -->
   <script type="text/javascript">
     window['__ls_namespace'] = '__ls';
     window['__ls_script_url'] = 'https://cdn.livesession.io/track.js';
@@ -56,7 +56,7 @@
 <body class="body dark">
 <div class="w-layout-blockcontainer page_loader--contain hide w-container">
   <div class="loader--wrp">
-    <div class="dvd_box"><img src="images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt="" class="eye">
+    <div class="dvd_box"><img src="app/images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt="" class="eye">
       <div class="page_loader--text">Loading</div>
     </div>
   </div>
@@ -66,10 +66,10 @@
     <div id="nav_sb" class="nav_sb">
       <div class="w-layout-blockcontainer top_nav--wrp w-container">
         <div class="sb_logo--wrp">
-          <a href="/" aria-current="page" class="sb_logo_link--wrp w-inline-block w--current"><img src="images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
+          <a href="/app/" aria-current="page" class="sb_logo_link--wrp w-inline-block w--current"><img src="app/images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
         </div>
         <div class="srchbr--wrp">
-          <div id="cmdb" class="cmd_bar"><img src="images/search-lg.svg" loading="lazy" width="14" height="14" alt="" class="image-14">
+          <div id="cmdb" class="cmd_bar"><img src="app/images/search-lg.svg" loading="lazy" width="14" height="14" alt="" class="image-14">
             <div class="dsh_srbr_ph">Find anything...</div>
             <div class="srbr_f_wrp">
               <div class="srbr_f">⌘K</div>
@@ -78,21 +78,21 @@
         </div>
         <div class="top_nav_menu_link--wrp">
           <div class="top_nav_menu_items--wrp">
-            <a href="/" aria-current="page" class="top_nav--link start w-inline-block w--current">
+            <a href="/app/" aria-current="page" class="top_nav--link start w-inline-block w--current">
               <div class="top_nav_link--text">Get Started</div>
             </a>
-            <a href="new" class="top_nav--link add w-inline-block">
+            <a href="app/new" class="top_nav--link add w-inline-block">
               <div class="top_nav_link--text">Add Proxies</div>
             </a>
-            <a href="allocate" class="top_nav--link allocate w-inline-block">
+            <a href="app/allocate" class="top_nav--link allocate w-inline-block">
               <div class="top_nav_link--text">Extend Time</div>
             </a>
-            <a href="funds" class="top_nav--link wallet w-inline-block">
+            <a href="app/funds" class="top_nav--link wallet w-inline-block">
               <div class="top_nav_link--text">Fund Wallet</div>
             </a>
           </div>
           <div class="sb_btn--wrp w-clearfix">
-            <a href="dashboard" class="sb_btn black w-inline-block w-clearfix">
+            <a href="app/dashboard" class="sb_btn black w-inline-block w-clearfix">
               <div checkout_btn_continue="ico" class="sb_btn_ico dash"></div>
               <div checkout_btn_continue="text" class="action_btn_text">Dashboard</div>
             </a>
@@ -103,7 +103,7 @@
         <a href="#" class="bttm_nav--link support cmdbhelp--nav w-inline-block">
           <div class="bttm_nav_link--text">Support</div>
         </a>
-        <a href="settings/account" class="bttm_nav--link settings w-inline-block">
+        <a href="app/settings/account" class="bttm_nav--link settings w-inline-block">
           <div class="bttm_nav_link--text">Settings</div>
         </a>
         <div class="user_btn--wrap">
@@ -175,7 +175,7 @@
               <div class="skel_crd--v2">
                 <div class="skel_crd_bg--v2"></div>
               </div>
-              <a href="new" class="sect_crd small2 w-inline-block">
+              <a href="app/new" class="sect_crd small2 w-inline-block">
                 <div class="sect_crd_tit_wrp w-clearfix">
                   <div class="rt_cta_ico absolute">
                     <div class="btn_ldr_wrp w-embed">
@@ -197,7 +197,7 @@
               <div class="skel_crd--v2">
                 <div class="skel_crd_bg--v2"></div>
               </div>
-              <a href="allocate" class="sect_crd small2 w-inline-block">
+              <a href="app/allocate" class="sect_crd small2 w-inline-block">
                 <div class="sect_crd_tit_wrp w-clearfix">
                   <div class="rt_cta_ico absolute">
                     <div class="btn_ldr_wrp w-embed">
@@ -219,7 +219,7 @@
               <div class="skel_crd--v2">
                 <div class="skel_crd_bg--v2"></div>
               </div>
-              <a href="settings/member" class="sect_crd small2 w-inline-block">
+              <a href="app/settings/member" class="sect_crd small2 w-inline-block">
                 <div class="sect_crd_tit_wrp w-clearfix">
                   <div class="rt_cta_ico absolute">
                     <div class="btn_ldr_wrp w-embed">
@@ -241,7 +241,7 @@
               <div class="skel_crd--v2">
                 <div class="skel_crd_bg--v2"></div>
               </div>
-              <a href="funds" class="sect_crd small2 w-inline-block">
+              <a href="app/funds" class="sect_crd small2 w-inline-block">
                 <div class="sect_crd_tit_wrp w-clearfix">
                   <div class="rt_cta_ico absolute">
                     <div class="btn_ldr_wrp w-embed">
@@ -308,7 +308,7 @@
               <div class="skel_crd--v2">
                 <div class="skel_crd_bg--v2"></div>
               </div>
-              <a href="settings/developers" class="sect_crd small2 w-inline-block">
+              <a href="app/settings/developers" class="sect_crd small2 w-inline-block">
                 <div class="sect_crd_tit_wrp w-clearfix">
                   <div class="rt_cta_ico absolute">
                     <div class="btn_ldr_wrp w-embed">
@@ -391,7 +391,7 @@
   </div>
 </div>
 <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61e7cdbd824d2f94d05c4edc" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-<script src="js/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.js" type="text/javascript"></script>
+<script src="app/js/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.js" type="text/javascript"></script>
 
 <script src="https://scripts.illusory.io/scripts/pages/start.full.js"></script>
 </body>
