--- a/public/new.html
+++ b/public/new.html
@@ -6,16 +6,16 @@
   <meta content="New" property="og:title">
   <meta content="New" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="css/components.css" rel="stylesheet" type="text/css">
-  <link href="css/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.css" rel="stylesheet" type="text/css">
+  <link href="app/css/normalize.css" rel="stylesheet" type="text/css">
+  <link href="app/css/components.css" rel="stylesheet" type="text/css">
+  <link href="app/css/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Inconsolata:400,700","Inter:300,regular,500,600,700"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon"><!--  LiveSession.io code  -->
+  <link href="app/images/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="app/images/webclip.png" rel="apple-touch-icon"><!--  LiveSession.io code  -->
   <script type="text/javascript">
     window['__ls_namespace'] = '__ls';
     window['__ls_script_url'] = 'https://cdn.livesession.io/track.js';
@@ -56,7 +56,7 @@
 <body class="body dark">
   <div class="w-layout-blockcontainer page_loader--contain hide w-container">
     <div class="loader--wrp">
-      <div class="dvd_box"><img src="images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt="" class="eye">
+      <div class="dvd_box"><img src="app/images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt="" class="eye">
         <div class="page_loader--text">Loading</div>
       </div>
     </div>
@@ -140,7 +140,7 @@
         <div class="modal_crd--line-divider"></div>
         <div class="modal_crd_content_wrp_btm">
           <div class="notice_subtext--wrap w-clearfix">
-            <div class="notice--text">Irreversible Action</div><img src="images/info-circle-duo-2.svg" loading="lazy" width="11" alt="" class="info_circle_duo--icon">
+            <div class="notice--text">Irreversible Action</div><img src="app/images/info-circle-duo-2.svg" loading="lazy" width="11" alt="" class="info_circle_duo--icon">
             <div class="info--wrap">
               <div class="info_grid--wrap">
                 <div class="w-layout-grid info_grid--item-explain one noborder">
@@ -176,7 +176,7 @@
     <div class="page_content--container">
       <div class="pg_hdr">
         <div class="pg_hdr_content">
-          <a href="/" class="pg_hdr_close w-inline-block"></a>
+          <a href="/app/" class="pg_hdr_close w-inline-block"></a>
           <div class="pg_hdr_close_dvdr"></div>
           <div class="pg_hdr_txt_wrp">
             <div class="pg_hdr_tit">Add Proxies</div>
@@ -192,7 +192,7 @@
                 <div class="sect_crd_tit w-clearfix">
                   <div class="sect_crd_tit_txt"> Add 5G Proxies (<span available_proxies="total">0</span>)</div>
                   <a href="docs/proxy-management/proxy-add" target="_blank" class="sect_crd_rt_cta w-inline-block w-clearfix">
-                    <div class="sect_crd_rt_cta_txt">Purchase Guide</div><img src="images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
+                    <div class="sect_crd_rt_cta_txt">Purchase Guide</div><img src="app/images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
                   </a>
                   <div class="sect_crd_subtxt">Add proxies to your account</div>
                 </div>
@@ -323,7 +323,7 @@
                 </div>
                 <div class="allo_ind_wrp_v3">
                   <div class="ind_det_wrp w-clearfix">
-                    <div indicator="action_required" class="ind_det green">No Pending Changes</div><img src="images/info-circle-duo-2.svg" loading="lazy" width="11" alt="" class="info_circle_duo--icon">
+                    <div indicator="action_required" class="ind_det green">No Pending Changes</div><img src="app/images/info-circle-duo-2.svg" loading="lazy" width="11" alt="" class="info_circle_duo--icon">
                     <div class="info--wrap">
                       <div class="info_grid--wrap">
                         <div class="w-layout-grid info_grid--item-explain one noborder">
@@ -344,7 +344,7 @@
                     <div class="w-layout-cell">
                       <div class="sect_crd_subtxt_wrp">
                         <div class="sect_crd_subtxt white">Product</div>
-                        <div class="checkout_tit_info_ico w-clearfix"><img src="images/info-circle-duo-2.svg" loading="lazy" width="11" alt="" class="info_circle_duo--icon">
+                        <div class="checkout_tit_info_ico w-clearfix"><img src="app/images/info-circle-duo-2.svg" loading="lazy" width="11" alt="" class="info_circle_duo--icon">
                           <div class="info--wrap sect-crd">
                             <div class="info_grid--wrap">
                               <div checkout_info_item="product" class="w-layout-grid info_grid--item-explain one noborder">
@@ -394,7 +394,7 @@
                     <div class="w-layout-cell fw_c">
                       <div class="sect_crd_subtxt_wrp">
                         <div class="sect_crd_subtxt white">Price Per Proxy</div>
-                        <div class="checkout_tit_info_ico w-clearfix"><img src="images/info-circle-duo-2.svg" loading="lazy" width="11" alt="" class="info_circle_duo--icon">
+                        <div class="checkout_tit_info_ico w-clearfix"><img src="app/images/info-circle-duo-2.svg" loading="lazy" width="11" alt="" class="info_circle_duo--icon">
                           <div class="info--wrap sect-crd">
                             <div class="info_grid--wrap">
                               <div class="w-layout-grid info_grid--item-explain one noborder">
@@ -611,7 +611,7 @@
                     <div class="w-layout-cell fw_c">
                       <div class="sect_crd_subtxt_wrp">
                         <div class="sect_crd_subtxt white">Time</div>
-                        <div class="checkout_tit_info_ico w-clearfix"><img src="images/info-circle-duo-2.svg" loading="lazy" width="11" alt="" class="info_circle_duo--icon">
+                        <div class="checkout_tit_info_ico w-clearfix"><img src="app/images/info-circle-duo-2.svg" loading="lazy" width="11" alt="" class="info_circle_duo--icon">
                           <div class="info--wrap sect-crd">
                             <div class="info_grid--wrap">
                               <div class="w-layout-grid info_grid--item-explain one noborder">
@@ -655,8 +655,8 @@
                         <div class="sect_crd_subtxt white">Wallet</div>
                       </div>
                       <div class="w-layout-cell rt_c link w-clearfix">
-                        <a href="funds" target="_blank" class="sect_crd_rt_cta w-inline-block w-clearfix">
-                          <div class="sect_crd_rt_cta_txt">Add Funds</div><img src="images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
+                        <a href="app/funds" target="_blank" class="sect_crd_rt_cta w-inline-block w-clearfix">
+                          <div class="sect_crd_rt_cta_txt">Add Funds</div><img src="app/images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
                         </a>
                       </div>
                     </div>
@@ -675,7 +675,7 @@
                       <div class="w-layout-cell lt_c">
                         <div class="sect_crd_subtxt_wrp">
                           <div class="sect_crd_subtxt white">Funds Required</div>
-                          <div class="checkout_tit_err_ico w-clearfix"><img src="images/alert-triangle.svg" loading="lazy" width="15" alt="" class="info_circle_duo--icon">
+                          <div class="checkout_tit_err_ico w-clearfix"><img src="app/images/alert-triangle.svg" loading="lazy" width="15" alt="" class="info_circle_duo--icon">
                             <div class="info--wrap">
                               <div class="info_grid--wrap">
                                 <div class="w-layout-grid info_grid--item-explain one noborder">
@@ -697,7 +697,7 @@
                       <div class="w-layout-cell lt_c">
                         <div class="sect_crd_subtxt_wrp">
                           <div is_member="false" checkout_text="member_discount" class="sect_crd_subtxt white">Member Discount Inactive</div>
-                          <div info="member_discount" class="checkout_tit_info_ico w-clearfix"><img src="images/info-circle-duo-2.svg" loading="lazy" width="11" height="11" alt="" class="info_circle_duo--icon">
+                          <div info="member_discount" class="checkout_tit_info_ico w-clearfix"><img src="app/images/info-circle-duo-2.svg" loading="lazy" width="11" height="11" alt="" class="info_circle_duo--icon">
                             <div class="info--wrap sect-crd">
                               <div class="info_grid--wrap">
                                 <div class="w-layout-grid info_grid--item-explain one noborder">
@@ -713,8 +713,8 @@
                       <div class="w-layout-cell rt_c link">
                         <div class="tog_wrp">
                           <div cta="member_discount_apply" class="apply_link w-clearfix">
-                            <a href="settings/member" target="_blank" class="sect_crd_rt_cta w-inline-block w-clearfix">
-                              <div class="sect_crd_rt_cta_txt">Enable Discount</div><img src="images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
+                            <a href="app/settings/member" target="_blank" class="sect_crd_rt_cta w-inline-block w-clearfix">
+                              <div class="sect_crd_rt_cta_txt">Enable Discount</div><img src="app/images/arrow-up-right-line-white-1sk.svg" loading="lazy" alt="" class="rt_cta_ico">
                             </a>
                           </div>
                           <div tog="member_discount" class="tog_ctn on hide">
@@ -791,7 +791,7 @@
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61e7cdbd824d2f94d05c4edc" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="js/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.js" type="text/javascript"></script>
+  <script src="app/js/illusory-app-ae51ffe2d8c0f9c74a23ef2fca.js" type="text/javascript"></script>
 
   <script src="https://scripts.illusory.io/scripts/pages/new.full.js"></script>
 </body>
