--- a/public/settings/account.html
+++ b/public/settings/account.html
@@ -14,8 +14,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Inconsolata:400,700","Inter:300,regular,500,600,700"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
-  <link href="../images/webclip.png" rel="apple-touch-icon"><!--  LiveSession.io code  -->
+  <link href="../app/images/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="../app/images/webclip.png" rel="apple-touch-icon"><!--  LiveSession.io code  -->
   <script type="text/javascript">
     window['__ls_namespace'] = '__ls';
     window['__ls_script_url'] = 'https://cdn.livesession.io/track.js';
@@ -57,7 +57,7 @@
 <body class="body dark">
   <div class="w-layout-blockcontainer page_loader--contain hide w-container">
     <div class="loader--wrp">
-      <div class="dvd_box"><img src="../images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt="" class="eye">
+      <div class="dvd_box"><img src="../app/images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt="" class="eye">
         <div class="page_loader--text">Loading</div>
       </div>
     </div>
@@ -67,11 +67,11 @@
       <div id="nav_sb" class="nav_sb">
         <div class="w-layout-blockcontainer top_nav--wrp w-container">
           <div class="sb_logo--wrp">
-            <a href="/" class="sb_logo_link--wrp w-inline-block"><img src="../images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
+            <a href="/app/" class="sb_logo_link--wrp w-inline-block"><img src="../app/images/illusory-logo-circle-icon-83w.svg" loading="lazy" width="83" alt="" class="sb_logo--img"></a>
           </div>
           <div class="top_nav_menu_link--wrp">
             <div class="top_nav_menu_items--wrp settings">
-              <a href="/" class="top_nav--link back w-inline-block">
+              <a href="/app/" class="top_nav--link back w-inline-block">
                 <div class="top_nav_link--text white">Settings</div>
               </a>
               <a href="../settings/account" aria-current="page" class="top_nav--link account w-inline-block w--current">
